<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" xmlns:maxads="http://schemas.applovin.com/android/1.0">
    <group android:id="@+id/top" android:checkableBehavior="none">
        <item android:icon="@drawable/ic_crown"
            android:visible="false"
            android:id="@+id/nav_unlock_premium" android:title="@string/unlock_premium"/>
    </group>
    <group android:id="@+id/mid" android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_tv_icon"
            android:id="@+id/nav_home"
            android:title="@string/channels"
            android:checked="true"/>
        <item android:icon="@drawable/ic_favorite_border" android:id="@+id/nav_profile"
            android:title="@string/profile"/>
        <item android:icon="@drawable/ic_actions_settings" android:id="@+id/nav_setting" android:title="@string/settings"/>
        <item android:icon="@drawable/ic_info" android:id="@+id/nav_about" android:title="@string/about"/>
    </group>
    <group android:id="@+id/bottom" android:checkableBehavior="none">
        <item android:icon="@drawable/ic_ic_actions_star" android:id="@+id/nav_rate" android:title="@string/rate_this_app"/>
        <item android:icon="@drawable/ic_share" android:id="@+id/nav_share" android:title="@string/share_this_app"/>
        <item android:icon="@drawable/ic_ic_contact_mail" android:id="@+id/nav_feedback" android:title="@string/feedback_amp_bugs"/>
        <item android:icon="@drawable/ic_instagram_outlined" android:id="@+id/nav_insta" android:title="@string/follow_us_on_instagram"/>
    </group>
</menu>