<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lyt_banner_ad"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:theme="@style/Theme.FireTvAppByGDevelopers.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:titleTextColor="@color/black"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_baseline_arrow"
                app:popupTheme="@style/Theme.FireTvAppByGDevelopers.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_below="@id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/noFavorite"
                android:background="@color/bgMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/app_name"
                        app:tint="@color/colorPrimary"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/ic_favorite_fill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_favoite"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_wallpaper_found"
                        android:textColor="@color/black" />

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>


    <include
        android:id="@+id/lyt_banner_ad"
        layout="@layout/include_banner_ad"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

</RelativeLayout>